# gaussianfeels

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
camera/: __init__.py  camera_pipeline.py
camera/gaussianfeels/: ARCHITECTURE.md  __init__.py
camera/gaussianfeels/backend/: __init__.py  gaussian_field.py
camera/gaussianfeels/core/: __init__.py  coarse_to_fine_optimizer.py  densify_prune.py  fusion.py  gaussian_field.py  gaussian_pose_optimizer.py  gaussian_surface_constraints.py
camera/gaussianfeels/eval/: evaluation.py
camera/gaussianfeels/instrumentation/: live_counters.py
camera/gaussianfeels/io/: __init__.py  depth_filters.py  frame_data.py  rgbd_dataset.py  rgbd_sensor.py  sam_segmenter.py  segmentation.py  sensor_adapters.py  tactile_predictors.py
camera/gaussianfeels/loss/: tactile_loss.py  volumetric_loss.py
camera/gaussianfeels/memory/: memory_planner.py
camera/gaussianfeels/modes/: mode_manager.py
camera/gaussianfeels/modules/: pose_optimizer.py
camera/gaussianfeels/registration/: open3d_registration.py
camera/gaussianfeels/render/: __init__.py  rasterizer.py
camera/gaussianfeels/utils/: __init__.py  camera_geometry.py  camera_transforms.py  gaussian_covariance_mesh.py  jacobian_diagnostics.py  performance_diagnostics.py  pose_transforms.py  profiler_integration.py  spatial_hash.py
camera/io/: depth_filters.py  rgbd_dataset.py  rgbd_sensor.py  segmentation.py
configs/: completion_config.yaml  completion_train_config.yaml  completion_train_config_advanced.yaml
docs/: ACADEMIC_AFFILIATION.md  MATHEMATICAL_FRAMEWORK.md  PAPER_FORMULAS.md  PUBLICATION_CHECKLIST.md  PUBLICATION_VENUES.md  api_reference.rst  conf.py  index.rst
fusion/: __init__.py  __main__.py  allegro_fk.py  config.py  fusion_test.py  main.py  tactile_depth_adapter.py  tactile_processor.py
fusion/core/: fusion.py  pose_optimizer.py
fusion/loss/: __init__.py  tactile_loss.py
gaussian/core/: coarse_to_fine_optimizer.py  densify_prune.py  gaussian_field.py  gaussian_pose_optimizer.py  gaussian_surface_constraints.py
gaussian/render/: rasterizer.py
gaussian/spatial/: __init__.py  o_n_queries.py  spatial_hash.py
gaussianfeels/: __init__.py  config.py  datasets.py  evaluation.py  main.py  optimization.py  sensors.py  server.py  trainer.py  visualization.py  web_viewer.py
main/: __init__.py  config.py  datasets.py  distributed.py  evaluation.py  main.py  optimization.py  sensors.py  server.py  trainer.py  visualization.py
misc/: __init__.py  config_utils.py  constants.py
misc/configs/: tactile_fusion_config.yaml
misc/configs/evaluation/: __init__.py  comprehensive.yaml
misc/configs/pipelines/: fusion.yaml  gaussian_field.yaml  gaussian_splat.yaml  standard_approach.yaml
misc/configs/sensors/: digit.yaml  multi_modal.yaml  realsense.yaml
misc/configs/touch_depth/: touchvit.yaml
misc/configs/training/: gaussian_pose_optimizer.yaml  tactile_fusion_training.yaml  theseus_optimizer.yaml
misc/configs/visualization/: rich_viz.yaml
misc/eval/: __init__.py  tactile_fusion_evaluation.py
misc/eval/occlusion/: feelsight_init.py  gaussian_occlusion_analysis.py  occlusion_plot.py
misc/logging/: pipeline_integration.py  wandb_integration.py
misc/utils/: __init__.py  logging_config.py
misc/viz/: __init__.py  tactile_fusion_visualization.py
scripts/: gf  gf-eval  run_ablation_study.py
shared/config/: __init__.py  config_system.py
shared/geometry/: __init__.py  frustum.py  pointcloud.py  transforms.py
shared/io/: sensor_adapters.py
shared/memory/: memory_monitor.py
shared/modes/: mode_manager.py
shared/registration/: __init__.py
shared/transforms/: world_coordinate_transforms.py
shared/utils/: __init__.py  dataset_utils.py  device_utils.py  error_handling.py  jacobian_diagnostics.py  object_reconstruction.py  performance_diagnostics.py  profiler_integration.py
tactile/: __init__.py
tactile/gaussianfeels/: __init__.py
tactile/gaussianfeels/contrib/: __init__.py
tactile/gaussianfeels/datasets/: __init__.py  dataset.py
tactile/gaussianfeels/geometry/: __init__.py  frustum.py  transform.py
tactile/gaussianfeels/modules/: __init__.py  allegro.py  misc.py  sample.py  sensor.py
tests/: test_fusion_with_gaussian_optimization.py  test_fusion_with_gaussian_optimization_feelsight_real.py
validation/: mathematical_validation.py  reproducibility_verification.py
webui/: index.html  manifest.webmanifest  package-lock.json  package.json  vite.config.ts
webui/public/: manifest.webmanifest  sw.js
webui/src/: App.tsx  main.tsx
(+22 files in other folders)
